--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@
 
 }
 .hero-photo .img {
-    background: url(/img/guy.jpg);
+    background: url(../img/guy.jpg);
     width: 470px;
     height: 685px;
     object-fit: cover;
