--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,10 @@
 
 }
 .hero-photo .img {
-    background: url(../img/guy.jpg);
+    /* background: url(../img/guy.jpg);
     width: 470px;
     height: 685px;
-    object-fit: cover;
+    object-fit: cover; */
 
 }
 /* card */
