--- a/css/style.css
+++ b/css/style.css
@@ -90,8 +90,7 @@
 .hero-photo .img {
     width: 470px;
     height: 685px;
-    object-fit: cover;
-    border-radius: 20px;
+
 }
 /* card */
 .card-list {
@@ -400,8 +399,9 @@
 .left-box .avt {
     width: 72px;
     height: 72px;
-    border-radius: 72px;
-    background: url(/img/author.png) lightgray -51.126px -33.052px / 228.267% 342.4% no-repeat;
+    /* border-radius: 72px; */
+    /* object-position: -51.126px -33.052px; */
+    /* background: url(/img/author.png) lightgray -51.126px -33.052px / 228.267% 342.4% no-repeat; */
 
     }
 .left-box .author {
